CMAKE_MINIMUM_REQUIRED(VERSION 3.2)
PROJECT(luo_framework)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)

AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src/core CORE_LIST)

ADD_EXECUTABLE(${PROJECT_NAME} ${CORE_LIST})

INSTALL(TARGETS ${PROJECT_NAME} DESTINATION bin)
INSTALL(FILES ${PROJECT_SOURCE_DIR}/conf/config.ini DESTINATION etc/${PROJECT_NAME} COMPONENT config)