CMAKE_MINIMUM_REQUIRED(VERSION 3.2)
PROJECT(luo_httpd)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)

AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src/core SRC_LIST)
AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src/msic MSIC_LIST)
LIST(APPEND SRC_LIST ${MSIC_LIST})

ADD_EXECUTABLE(${PROJECT_NAME} ${SRC_LIST})

INSTALL(TARGETS luo_httpd DESTINATION bin)
INSTALL(FILES ${PROJECT_SOURCE_DIR}/conf/httpd.ini DESTINATION etc/luo_httpd COMPONENT config)